# docker-practical-guide

./: Readme.md
Lab1/: docker-compose.yml
Lab1/app/: main.py
Lab2/: Dockerfile  README.md  docker-compose.yml
Lab3/: README.md  monitoring-compose.yml  run-scenario3.sh  run-scenario4.sh  webapp-compose.yml
Lab3/web/: index.html
Lab3/web-cli/: index.html
Lab3/webapp/: index.html
Lab3/webapp-cli/: index.html
Lab4/: docker-compose.yml
Lab4/example1-go/: Dockerfile  docker-compose.yml
Lab4/example2-node/: Dockerfile  docker-compose.yml  package.json
Lab4/example3-python/: docker-compose.yml  pyproject.toml
Lab4/example4-java/: Dockerfile  README.md  docker-compose.yml
Lab5/: Dockerfile.multistage  README.md  cleanup.sh  docker-image-commands.sh
Lab6/app/: Dockerfile  package.json
Lab7/: docker-bake.hcl  docker-compose.yml.bak
Lab7/app/: index.js  package.json  run-local.sh
lab8/: .gitignore  cleanup.sh  deploy.sh  docker-compose.yml
lab8/cdk/: .gitignore  cdk.context.json  package.json
lab8/diagrams/: aws_architecture.txt
lab8/frontend/: Dockerfile
lab8/nginx/: nginx.conf
praticeLabs/Lab1/: Dockerfile  README.md
praticeLabs/Lab3/: README.md  cleanup.sh  microservices-compose.yml  processing-compose.yml  run-scenario1.sh  run-scenario2.sh
praticeLabs/Lab4/: README.md  cleanup.sh  test-all.sh  test-compose.sh
praticeLabs/Lab5/: Dockerfile.basic  Dockerfile.nonroot  docker-compose.yml
praticeLabs/Lab6/: README.md  basic-service-compose.yml  cleanup.sh  global-service-compose.yml  multi-service-compose.yml  setup-swarm.sh  (+1 more)
(+45 files in other folders)
